# libnbtplusplus

./: .gitignore  CMakeLists.txt  README.md  README.txt  Requirements.md  makefile  test.cpp
cmake/: libnbt++.pc.in
doxygen/: doxyfile
include/: crtp_tag.h  endian_str.h  libnbt.h  nbt_conf.h.in  nbt_io.h  nbt_value.h  nbt_visitor.h  primitive_detail.h  tag.h  tag_array.h  tag_base.h  tag_byte_array.h  tag_compound.h  tag_int_array.h  tag_list.h  tag_primitive.h  tag_scalar.h  tag_string.h  tag_visitor.h  tagfwd.h  value.h  value_initializer.h
include/io/: izlibstream.h  ozlibstream.h  stream_reader.h  stream_writer.h  zlib_error.h  zlib_streambuf.h
include/libnbt++/: nbt_export.h
include/libnbt++/io/: izlibstream.h  ozlibstream.h  stream_reader.h  stream_writer.h  zlib_streambuf.h
include/libnbt++/text/: json_formatter.h
include/text/: json_formatter.h
src/: endian_str.cpp  read.cpp  tag.cpp  tag_array.cpp  tag_compound.cpp  tag_list.cpp  tag_primitive.cpp  tag_string.cpp  value.cpp  value_initializer.cpp
src/io/: izlibstream.cpp  ozlibstream.cpp  stream_reader.cpp  stream_writer.cpp
src/text/: json_formatter.cpp
test/: CMakeLists.txt  endian_str_test.cpp  endian_str_test.h  format_test.cpp  microtest.h  nbttest.cpp  nbttest.h  read_test.cpp  read_test.h  write_test.cpp  write_test.h  zlibstream_test.h
test/io/: bigtest.nbt  read_test.cpp
test/testfiles/: bigtest.zlib
